Feature: Create icon-section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,34 @@ git<!DOCTYPE html>
         <div class="screen"></div>
       </div>
     </header>
-
+    <section class="icon-section">
+      <div class="container">
+        <div class="img-item">
+          <h2 class="title">Manage Your Workflow</h2>
+          <p class="subtitle">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+          <a href="#" class="see-more">See more</a>
+        </div>
+        <div class="img-item">
+          <h2 class="title">Analytics & Insights</h2>
+          <p class="subtitle">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+          <a href="#" class="see-more">See more</a>
+        </div>
+        <div class="img-item">
+          <h2 class="title">Organize Your Deadlines</h2>
+          <p class="subtitle">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+          <a href="#" class="see-more">See more</a>
+        </div>
+      </div>
+    </section>
     <script src="./js/main.js"></script>
   </body>
 </html>
