--- a/index.html
+++ b/index.html
@@ -53,6 +53,24 @@ git<!DOCTYPE html>
         </div>
       </div>
     </section>
+    <section class="need-section">
+      <div class="container">
+        <div class="text">
+          <h2 class="title">All You need is a browser!</h2>
+          <p class="subtitle">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+          <p class="subtitle">
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+            nisi ut aliquip ex ea commodo consequat.
+          </p>
+          <p class="sub-ready-one">Lorem ipsum dolor sit amet consectetur</p>
+          <p class="sub-ready-two">Ut enim ad minim veniam quis nostrud</p>
+        </div>
+        <div class="need-img"></div>
+      </div>
+    </section>
     <script src="./js/main.js"></script>
   </body>
 </html>
