Feature: create Drag & Drop section

--- a/index.html
+++ b/index.html
@@ -71,6 +71,29 @@
         <div class="need-img"></div>
       </div>
     </section>
+	 <section class="drag-drop">
+		 <div class="container">
+			 <div class="in-progres">
+				<p class="title-text">In Progres</p>
+				<div class="img"></div>
+				<div class="img"></div>
+				<div class="img"></div>
+			 </div>
+			 <div class="completed">
+				<p class="title-text">Completed</p>
+				<div class="img"></div>
+				<div class="img"></div>
+				<div class="img-form">Drop here</div>
+			 </div>
+			 <div class="text">
+				<h3 class="title">Drag & Drop</h3>
+				<div class="wrapper">
+				<p class="subtitle">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam hic eos ut consequatur ipsam? Eaque quasi fugit, earum.</p>
+				<p class="subtitle">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta quo libero error blanditiis unde at distinctio quod numquam laudantium vel.</p>
+				</div>
+			 </div>
+		 </div>
+	 </section>
     <script src="./js/main.js"></script>
   </body>
 </html>
