Feature: made price-list block and footer

--- a/index.html
+++ b/index.html
@@ -94,6 +94,72 @@
 			 </div>
 		 </div>
 	 </section>
+	 <section class="price-list">
+		 <div class="container">
+			 <h1 class="title">Powerfull PSD Template</h1>
+			<p class="title-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+			Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+			</p>
+			<div class="wrapper">
+				<div class="clean-info">
+					<h2 class="clean-title">Clean & modern layout</h2>
+					<p class="clean-sub">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+				</div>
+				<div class="easy-info">
+					<h2 class="easy-title">Easy to customize</h2>
+					<p class="easy-sub">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+				</div>
+			</div>
+			<div class="price">
+				<h2 class="price-title">Check our pricing!</h2>
+				<div class="plan bronze-list">
+					<h3 class="bronze">BRONZE PLAN</h3>
+					<p class="bronze-price">19</p>
+					<ul class="services">
+						<li class="item">Lorem ipsum dolor sit am</li>
+						<li class="item">Lorem ipsum dolor sit am</li>
+						<li class="item">Lorem ipsum dolor sit am</li>
+						<li class="item">Lorem ipsum dolor sit am</li>
+					</ul>
+				</div>
+				<div class="plan silver-list">
+					<h3 class="silver">SILVER PLAN</h3>
+					<p class="silver-price">49</p>
+					<ul class="services">
+						<li class="item">Lorem ipsum dolor sit am</li>
+						<li class="item">Lorem ipsum dolor sit am</li>
+						<li class="item">Lorem ipsum dolor sit am</li>
+						<li class="item">Lorem ipsum dolor sit am</li>
+					</ul>
+				</div>
+				<div class="plan">
+					<h3 class="gold">GOLD PLAN</h3>
+					<p class="gold-price">99</p>
+					<ul class="services">
+						<li class="item">Lorem ipsum dolor sit am</li>
+						<li class="item">Lorem ipsum dolor sit am</li>
+						<li class="item">Lorem ipsum dolor sit am</li>
+						<li class="item">Lorem ipsum dolor sit am</li>
+					</ul>
+				</div>
+			</div>
+			<p class="end-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+			<a href="#" class="end-btn">Join now!</a>
+		 </div>
+	 </section>
+	 <footer class="footer">
+		 <p class="copywrite">© 2016 Merkury All Right Reserved</p>
+		 <ul class="link-footer">
+			 <li class="footer-link"><a href="#" class="link">Pricing</a></li>
+			 <li class="footer-link"><a href="#" class="link">Blog</a></li>
+			 <li class="footer-link"><a href="#" class="link">Contact</a></li>
+		 </ul>
+		 <ul class="footer-pages">
+			 <li class="page-f"><a href="#" class="f-link"></a></li>
+			 <li class="page-t"><a href="#" class="t-link"></a></li>
+			 <li class="page-g"><a href="#" class="g-link"></a></li>
+		 </ul>
+	 </footer>
     <script src="./js/main.js"></script>
   </body>
 </html>
